# kafka-connector-starter

./: Dockerfile  pyproject.toml
.github/workflows/: docker-build.yml
kafka_connector_starter/: main.py
