[tool.poetry]
name = "kafka-connector-starter"
version = "0.1.0"
description = ""
authors = ["kunsonxs <hxmswl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
